--- a/OdeToFood/appsettings.json
+++ b/OdeToFood/appsettings.json
@@ -7,5 +7,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Message":  "Olá, appsettings"
+  "Message": "Olá, appsettings",
+  "ConnectionStrings": {
+    "OdeToFoodDb":  "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=OdeToFood;Integrated Security=True;"
+  }
 }
